--- a/02-modal-dialog/index.html
+++ b/02-modal-dialog/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Modal</title>
+    <title>Modal - native dialog element</title>
     <link rel="stylesheet" href="../dist/css/main.css" />
     <script
       src="https://kit.fontawesome.com/40036eafc0.js"
