Finish exercise no. 8 - shopping list

--- a/08-shopping-list/index.html
+++ b/08-shopping-list/index.html
@@ -16,35 +16,13 @@
     <div class="column-container">
       <h1>Shopping List</h1>
       <div class="shopping-list">
-        <form class="shopping-form">
+        <form class="shopping-form" autocomplete="off">
           <input type="text" id="shopping-input" name="item" required />
           <button type="submit" class="btn btn-primary" id="add-btn">
             <i class="fas fa-plus-circle"></i> Add Item
           </button>
         </form>
-        <ul class="list">
-          <!-- <li class="list-element">
-            <input type="checkbox" />
-            <p class="list-description">First element</p>
-            <button class="btn btn-round">
-              <i class="fas fa-trash-alt"></i>
-            </button>
-          </li>
-          <li class="list-element">
-            <input type="checkbox" />
-            <p class="list-description">Second element</p>
-            <button class="btn btn-round">
-              <i class="fas fa-trash-alt"></i>
-            </button>
-          </li>
-          <li class="list-element">
-            <input type="checkbox" />
-            <p class="list-description">Third element</p>
-            <button class="btn btn-round">
-              <i class="fas fa-trash-alt"></i>
-            </button>
-          </li> -->
-        </ul>
+        <ul class="list"></ul>
       </div>
     </div>
   </body>
